fixed the problem with navigation showing on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -1,3 +1,4 @@
+
 body{
     display:grid;
     grid-template-columns: 100%;
@@ -131,7 +132,7 @@ body{
  .sidebar a{
     width: 100%;
     justify-items: center;
-    font-size: 3em;
+    font-size: 2.5em;
     
  }
 
@@ -160,4 +161,18 @@ body{
     display: block;
 
 }
+
+.nav-links{
+    display: none;
+    background: white;
+}
+
+nav{
+    background-color: white;
+}
+
+
+
+
+
    
